Fix mobile nav spacing issue

--- a/static/css/_media-queries.css
+++ b/static/css/_media-queries.css
@@ -1,3 +1,20 @@
+@media only screen and (max-width: 300px) {
+
+    .mobile-nav-wrapper {
+        width: 100% !important;
+    }
+
+    .mobile-nav {
+        justify-content: space-evenly !important;
+    }
+
+    .list-inline-item {
+        margin: 0 !important
+    }
+
+}
+
+
 @media only screen and (max-width: 322px) {
 
     .discount-banner img {
